# smec

./: Cargo.toml
benches/: iter.rs
examples/: simple.rs  simple2rs
src/: component_storage.rs  entity.rs  entity_list.rs  iter.rs  lib.rs  macro_define.rs  serde.rs
src/genarena/: iter.rs  mod.rs  tests.rs
tests/: basic.rs  serde.rs
