[package]
name = "smec"
authors = ["Andres Franco <andres.franco@vermeilsoft.com>"]
description = "SMart Entity Component helper, designed for flexibility and ease of use, but while keeping decent speeds"
keywords = ["ecs"]
categories = ["data-structures"]
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }